<resources>
    <string name="app_name">GestaoHospitais</string>
    <string name="nome">Nome</string>
    <string name="numeroUtente">Numero de Utente</string>
    <string name="idade">Idade</string>
    <string name="morada">Morada</string>
    <string name="telefone">Telefone</string>
    <string name="abrirSintomas">Ir para Sintomas</string>
    <string name="registarDoente">Registar Doente</string>
    <string name="Tosse">tosse</string>
    <string name="tosse">Tosse</string>
    <string name="febre">Febre</string>
    <string name="dificuldade_respiratoria">Dificuldade Respiratoria</string>
    <string name="fadiga">Fadiga</string>
    <string name="n">N</string>
    <string name="abrirHospitais">Ir para Hospitais</string>
    <string name="doentes_internados">Doentes Internados</string>
    <string name="numero_do_cc">Número do CC</string>
    <string name="hospital_sousa_martins_guarda">Hospital Sousa Martins, Guarda</string>
    <string name="hospital_de_santa_maria_lisboa">Hospital de Santa Maria, Lisboa</string>
    <string name="hospital_de_sao_joao_porto">Hospital de São João, Porto</string>
    <string name="hospital_de_faro">Hospital de Faro</string>
    <string name="confirmar_registo">Confirmar Registo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="hospital_sousa_martins_guarda">Hospital Sousa Martins, Guarda</string>
    <string name="hospital_de_santa_maria_lisboa">Hospital de Santa Maria, Lisboa</string>
    <string name="hospital_de_sao_joao_porto">Hospital de São João, Porto</string>
    <string name="hospital_de_faro">Hospital de Faro</string>
</resources>
