<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_login"
    tools:context=".SintomasActivity">

    <Switch
        android:id="@+id/switchTosse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/tosse" />

    <Switch
        android:id="@+id/switchFebre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/febre" />

    <Switch
        android:id="@+id/switchDificuldadeRespiratoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/dificuldade_respiratoria" />

    <Switch
        android:id="@+id/switchFadiga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/fadiga" />

    <Button
        android:id="@+id/buttonAbrirHospitais"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:background="@drawable/custom_button_blue"
        android:text="@string/abrirHospitais" />
</LinearLayout>