<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HospitaisActivity" >


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioButtonGuarda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hospital_sousa_martins_guarda"
            android:onClick="checkButton"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButtonLisboa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hospital_de_santa_maria_lisboa"
            android:onClick="checkButton"/>

        <RadioButton
            android:id="@+id/radioButtonPorto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hospital_de_sao_joao_porto"
            android:onClick="checkButton"/>

        <RadioButton
            android:id="@+id/radioButtonFaro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hospital_de_faro"
            android:onClick="checkButton"/>
    </RadioGroup>

    <Button
        android:id="@+id/buttonConfirmarRegisto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/confirmar_registo" />
</LinearLayout>